all page bug fix
home page design done

--- a/sub-pages/about/about.html
+++ b/sub-pages/about/about.html
@@ -146,18 +146,19 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 col-lg-6">
-                            <p class="about_us_text">About Us</p>
-                            <h2 class="f42 fw-500">Charged with Purpose to Shaping Future of Energy</h2>
-                            <p class="dull-white f18">We more than just a provider of electricity services - we're
-                                pioneers in the energy
-                                industry,
-                                dedicated to shaping a brighter, more sustainable future for all.</p>
+                            <p class="about_us_text">Who Are We</p>
+                            <h2 class="f42 fw-500">Energize Your Knowledge Get to Know Us</h2>
+                            <p class="dull-white f18">With a commitment to sustainability, innovation, and customer
+                                satisfaction, we strive to provide reliable, efficient, and eco-friendly electricity
+                                services to homes, businesses.</p>
                             <div class="div_with_tick">
-                                <p><i class="fa fa-check" aria-hidden="true"></i> sample tet for the home page</p>
-                                <p><i class="fa fa-check" aria-hidden="true"></i> sample tet for the home page</p>
-                                <p><i class="fa fa-check" aria-hidden="true"></i> sample tet for the home page</p>
+                                <p><i class="fa fa-check" aria-hidden="true"></i> Established fact that a reader will be
+                                    distracted.</p>
+                                <p><i class="fa fa-check" aria-hidden="true"></i> Established fact that a reader will be
+                                    distracted.</p>
+                                <p><i class="fa fa-check" aria-hidden="true"></i> Trusted Electrical Services</p>
                             </div>
-                            <button class="btn btn-danger">About Us</button>
+                            <button class="btn btn-danger">View Service</button>
                         </div>
 
                         <div class="col-md-12 col-lg-6">
@@ -176,11 +177,10 @@
                             src="https://cdn.pixabay.com/photo/2025/03/09/16/02/hare-9457418_1280.jpg" alt="">
                     </div>
                     <div class="col-md-12 col-lg-6">
-                        <p class="about_us_text">About Us</p>
-                        <p class="f42 fw-500">Charged with Purpose to Shaping Future of Energy</p>
-                        <p class="dull-white f18">We more than just a provider of electricity services - we're pioneers
-                            in the energy industry,
-                            dedicated to shaping a brighter, more sustainable future for all.</p>
+                        <p class="about_us_text">Why Choose Us</p>
+                        <p class="f42 fw-500">Illuminate Your Choice Reasons to Choose Us</p>
+                        <p class="dull-white f18">Because we're more than just an electricity provider – we're your
+                            trusted partner in power. With a commitment to reliability.</p>
                         <div>
                             <div class="d-flex flex-column">
                                 <p class="d-flex justify-content-between"><span>AC installation in one hour</span>
@@ -190,21 +190,21 @@
                                 <!-- <p>80%</p> -->
                             </div>
                             <div class="d-flex flex-column">
-                                <p class="d-flex justify-content-between"><span>AC installation in one hour</span>
+                                <p class="d-flex justify-content-between"><span>Full-service electrical</span>
                                     <span>80%</span>
                                 </p>
                                 <progress class="w-100" value="80" max="100"></progress>
                                 <!-- <p>80%</p> -->
                             </div>
                             <div class="d-flex flex-column">
-                                <p class="d-flex justify-content-between"><span>AC installation in one hour</span>
+                                <p class="d-flex justify-content-between"><span>Wiring and installation</span>
                                     <span>80%</span>
                                 </p>
                                 <progress class="w-100" value="80" max="100"></progress>
                                 <!-- <p>80%</p> -->
                             </div>
                         </div>
-                        <button class="btn btn-danger">About Us</button>
+                        <button class="btn btn-danger">Find More</button>
                     </div>
                 </div>
             </div>
