--- a/sub-pages/service/service.html
+++ b/sub-pages/service/service.html
@@ -100,6 +100,7 @@
             <div class="fade-in top_img-container">
                 <img class="" src="../../assets/service of DE.jpg" alt="">
             </div>
+            <p class="our_service_text text-center">OUR SERVICE</p>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-6 card-main_container fade-in">
@@ -111,7 +112,7 @@
                                 01
                             </div>
                             <div class="card-content">
-                                <p><b>Bright Spark Service</b></p>
+                                <p class="f24"><b>Bright Spark Service</b></p>
                                 <p>Explore Our range of service below & discover how you power your life</p>
                                 <a href="#">Learn More</a>
                             </div>
@@ -127,8 +128,8 @@
                                 02
                             </div>
                             <div class="card-content">
-                                <p><b>Bright Spark Service</b></p>
-                                <p>Explore Our range of service below & discover how you power your life</p>
+                                <p class="f24"><b>Energy Ease Packages</b></p>
+                                <p>With cutting-edge technology & industry expertise, we empower</p>
                                 <a href="#">Learn More</a>
                             </div>
                         </div>
@@ -143,8 +144,8 @@
                                 03
                             </div>
                             <div class="card-content">
-                                <p><b>Bright Spark Service</b></p>
-                                <p>Explore Our range of service below & discover how you power your life</p>
+                                <p class="f24"><b>Electra Care Packages</b></p>
+                                <p>Our team of experts is committed to delivering high-quality services</p>
                                 <a href="#">Learn More</a>
                             </div>
                         </div>
@@ -159,8 +160,8 @@
                                 04
                             </div>
                             <div class="card-content">
-                                <p><b>Bright Spark Service</b></p>
-                                <p>Explore Our range of service below & discover how you power your life</p>
+                                <p class="f24"><b>Energy Save Solutions</b></p>
+                                <p>We offer a comprehensive range of solutions designed to empower</p>
                                 <a href="#">Learn More</a>
                             </div>
                         </div>
@@ -175,8 +176,8 @@
                                 05
                             </div>
                             <div class="card-content">
-                                <p><b>Bright Spark Service</b></p>
-                                <p>Explore Our range of service below & discover how you power your life</p>
+                                <p class="f24"><b>Circuit Works Energy</b></p>
+                                <p>EThe lights on and the energy flowing, powering your present</p>
                                 <a href="#">Learn More</a>
                             </div>
                         </div>
@@ -191,8 +192,8 @@
                                 06
                             </div>
                             <div class="card-content">
-                                <p><b>Bright Spark Service</b></p>
-                                <p>Explore Our range of service below & discover how you power your life</p>
+                                <p class="f24"><b>Power Sync Solutions</b></p>
+                                <p>Explore our range of services below & discover how you power your life</p>
                                 <a href="#">Learn More</a>
                             </div>
                         </div>
@@ -200,10 +201,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- AUTOMATIC SCROLL -->
-
-
 
         <!-- PRE FOOTER -->
         <div class="pre_footer-container">
@@ -232,45 +229,44 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 col-md-6 fade-in">
-                        <p>Current</p>
-                        <p class="dull-white">Our goal is to demystify the process, address your concerns, and empower
+                        <p class="f24">Current</p>
+                        <p class="dull-white f18">Our goal is to demystify the process, address your concerns, and
+                            empower
                             you with the
                             knowledge to embark.</p>
                     </div>
                     <div class="col-lg-1 d-lg-block d-none"></div>
                     <div class="col-lg-2 col-md-6 fade-in">
-                        <p>Electricity service</p>
-                        <p>Air Conditioning </p>
-                        <p>Electrical Panels </p>
-                        <p>Security System </p>
-                        <p>Indoor Lighting </p>
-                        <p>Electrical Services</p>
+                        <p class="f24">Electricity service</p>
+                        <p class="f18">Air Conditioning </p>
+                        <p class="f18">Electrical Panels </p>
+                        <p class="f18">Security System </p>
+                        <p class="f18">Indoor Lighting </p>
+                        <p class="f18">Electrical Services</p>
                     </div>
                     <div class="col-lg-1 d-lg-block d-none"></div>
 
                     <div class="col-lg-2 col-md-6 fade-in">
-                        <p>Quick Links</p>
-                        <p><a href="">Home</a></p>
-                        <p><a href="">About</a></p>
-                        <p><a href="">Project</a></p>
-                        <p><a href="">Service</a></p>
-                        <p><a href="">Contact</a></p>
+                        <p class="f24">Quick Links</p>
+                        <p><a class="f18" href="">Home</a></p>
+                        <p><a class="f18" href="">About</a></p>
+                        <p><a class="f18" href="">Project</a></p>
+                        <p><a class="f18" href="">Service</a></p>
+                        <p><a class="f18" href="">Contact</a></p>
                     </div>
 
                     <div class="col-lg-3 col-md-6 fade-in">
-                        <p>Contact US</p>
-                        <p><a href="tel:+91 9363318493"><i class="fa fa-volume-control-phone"
+                        <p class="f24">Contact US</p>
+                        <p><a class="f18" href="tel:+91 9363318493"><i class="fa fa-volume-control-phone"
                                     aria-hidden="true"></i>&nbsp; +91 9363318493</a></p>
-                        <p><a href="mailto:gow7610124@gmail.com"><i class="fa fa-envelope"
+                        <p><a class="f18" href="mailto:gow7610124@gmail.com"><i class="fa fa-envelope"
                                     aria-hidden="true"></i>&nbsp;gow7610124@gmail.com</a></p>
-                        <p><a href="https://maps.app.goo.gl/cnLafwaH5qnCu4Z99"><i class="fa fa-map-marker"
-                                    aria-hidden="true"></i>&nbsp;30/1, Vivekanandha Nagar,
-                                Thekkupalayam
-                                (po), Coimbatore - 641020</a></p>
+                        <p><a class="f18" href="https://maps.app.goo.gl/cnLafwaH5qnCu4Z99"><i class="fa fa-map-marker"
+                                    aria-hidden="true"></i>&nbsp;30/1, Vivekanandha Nagar,Thekkupalayam (po), Coimbatore
+                                - 641020</a></p>
                     </div>
                 </div>
             </div>
-
         </footer>
     </div>
 </body>
