live site bug fix

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <img src="assets/logo.png" alt="">
                 </div>
                 <ul class="list-unstyled nav-list">
-                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/devi-electricals-pre-demo/index.html">Home</a></li>
                     <li><a href="sub-pages/about/about.html">About</a></li>
                     <li><a href="sub-pages/projects/project.html">Project</a></li>
                     <li><a href="sub-pages/service/service.html">Service</a></li>
@@ -37,7 +37,7 @@
                 </ul>
                 <div class="nav_contact">
                     <button class="btn btn-danger"><a class="text-white" download
-                            href="../../assets/Devi Electricals portfolio.pdf">Download Brouchere</a></button>
+                            href="assets/Devi Electricals portfolio.pdf">Download Brouchere</a></button>
                 </div>
                 <div class="text-white menu-icon">
                     <i class="fa fa-bars" aria-hidden="true"></i>
@@ -102,13 +102,16 @@
                 <div class="swiper-wrapper">
                     <!-- Slides -->
                     <div class="swiper-slide">
-                        <img src="https://cdn.pixabay.com/photo/2024/05/19/13/27/daisies-8772617_1280.jpg" alt="" />
+                        <img class="w-100" src="https://cdn.pixabay.com/photo/2024/05/19/13/27/daisies-8772617_1280.jpg"
+                            alt="" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="https://cdn.pixabay.com/photo/2024/05/19/13/27/daisies-8772617_1280.jpg" alt="" />
+                        <img class="w-100" src="https://cdn.pixabay.com/photo/2024/05/19/13/27/daisies-8772617_1280.jpg"
+                            alt="" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="https://cdn.pixabay.com/photo/2024/05/19/13/27/daisies-8772617_1280.jpg" alt="" />
+                        <img class="w-100" src="https://cdn.pixabay.com/photo/2024/05/19/13/27/daisies-8772617_1280.jpg"
+                            alt="" />
                     </div>
                     ...
                 </div>
@@ -429,7 +432,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12 pre_footer_image-container">
-                            <img src="../../assets/pre_footer_image.png" alt="">
+                            <img src="assets/pre_footer_image.png" alt="">
                         </div>
                     </div>
                 </div>
