--- a/sub-pages/about/about.html
+++ b/sub-pages/about/about.html
@@ -31,7 +31,7 @@
                     <li><a href="/devi-electricals-pre-demo">Home</a></li>
                     <li><a href="../../sub-pages/about/about.html">About</a></li>
                     <li><a href="../../sub-pages/projects/project.html">Project</a></li>
-                    <li><a href=".././sub-pages/service/service.html">Service</a></li>
+                    <li><a href="../../sub-pages/service/service.html">Service</a></li>
                     <li><a href="../../sub-pages/contact/contact.html">Contact</a></li>
                 </ul>
                 <div class="nav_contact">
@@ -210,6 +210,7 @@
             </div>
 
             <!-- Testimonials -->
+            <p class="text-center f42 fw-500 fade-in">Client Testimonial</p>
             <div class="testimonial_container pt80 bg-container-dull fade-in">
                 <div id="craouselContainer" class="swiper-container">
                     <div class="swiper-wrapper" id="slideHolder">
@@ -222,8 +223,9 @@
             </div>
 
             <!-- Running Text -->
+            <p class="text-center f42 fw-500 fade-in py-4">We Work With</p>
             <div class="running_text_container container fade-in">
-                <div class="running_text pt80 pb80">
+                <div class="running_text pb80">
                     <img src="https://html.fleexstudio.com/current/assets/img/elements/brand1.png" alt="">
                     <img src="https://html.fleexstudio.com/current/assets/img/elements/brand1.png" alt="">
                     <img src="https://html.fleexstudio.com/current/assets/img/elements/brand1.png" alt="">
