nav bar and home page bug fix

--- a/sub-pages/projects/project.html
+++ b/sub-pages/projects/project.html
@@ -8,6 +8,9 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css'>
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet"> -->
+
     <link rel="stylesheet" href="project.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -89,10 +92,8 @@
             <div class="nav-responsive_info">
                 <h3>Contact Info</h3>
                 <p><i class="fa fa-volume-control-phone" aria-hidden="true"></i>&nbsp; &nbsp; +91 9363318493</p>
-                <p class="mb-4"><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp; &nbsp;devielectrical@gmail.com
+                <p class=""><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp; &nbsp;devielectrical@gmail.com
                 </p>
-
-                <h3 class="">Our Location</h3>
                 <p class="mb-4"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp; &nbsp;30/1, Vivekanandha
                     nagar,
                     Thekkupalayam
@@ -164,11 +165,11 @@
                 <p>Site Supervisors</p>
                 <p>19</p>
             </div>
-            <div class="text-center fade-in labour-details_container">
+            <!-- <div class="text-center fade-in labour-details_container">
                 <img class="w-100" src="https://cdn.pixabay.com/photo/2025/03/09/16/02/hare-9457418_960_720.jpg" alt="">
                 <p>Fore Man</p>
                 <p>19</p>
-            </div>
+            </div> -->
             <div class="text-center fade-in labour-details_container">
                 <img class="w-100" src="https://cdn.pixabay.com/photo/2025/03/09/16/02/hare-9457418_960_720.jpg" alt="">
                 <p>Electricans</p>
