--- a/sub-pages/about/about.html
+++ b/sub-pages/about/about.html
@@ -73,10 +73,8 @@
             <div class="nav-responsive_info">
                 <h3>Contact Info</h3>
                 <p><i class="fa fa-volume-control-phone" aria-hidden="true"></i>&nbsp; &nbsp; +91 9363318493</p>
-                <p class="mb-4"><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp; &nbsp;devielectrical@gmail.com
+                <p class=""><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp; &nbsp;devielectrical@gmail.com
                 </p>
-
-                <h3 class="">Our Location</h3>
                 <p class="mb-4"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp; &nbsp;30/1, Vivekanandha
                     nagar,
                     Thekkupalayam
