--- a/sub-pages/service/service.html
+++ b/sub-pages/service/service.html
@@ -72,8 +72,13 @@
             <div class="nav-responsive_info">
                 <h3>Contact Info</h3>
                 <p><i class="fa fa-volume-control-phone" aria-hidden="true"></i>&nbsp; &nbsp; +91 9363318493</p>
-                <p class="mb-4"><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp; &nbsp;devielectrical@gmail.com
+                <p class=""><i class="fa fa-envelope" aria-hidden="true"></i>&nbsp; &nbsp;devielectrical@gmail.com
                 </p>
+                <p class="mb-4"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp; &nbsp;30/1, Vivekanandha
+                    nagar,
+                    Thekkupalayam
+                    (po), CBE
+                    - 20</p>
             </div>
 
             <div class="nav-footer">
