--- a/sub-pages/about/about.html
+++ b/sub-pages/about/about.html
@@ -106,7 +106,7 @@
                 <img class="w-100" src="../../assets/service of DE.jpg" alt="">
             </div>
             <!-- About US -->
-            <div class="about_us_container pt80 pb80">
+            <div class="about_us_container pb80">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 col-lg-6">
@@ -114,33 +114,37 @@
                                 src="https://cdn.pixabay.com/photo/2025/03/09/16/02/hare-9457418_1280.jpg" alt="">
                         </div>
 
-                        <div class="col-md-12 col-lg-6 fade-in">
+                        <div class="col-md-12 col-lg-6">
                             <p class="about_us_text">About Us</p>
-                            <h2 class="f42 fw-500">Charged with Purpose to Shaping Future of Energy</h2>
-                            <p class="dull-white f18">We more than just a provider of electricity services - we're
+                            <h2 class="f42 fw-500 fade-in">Charged with Purpose to Shaping Future of Energy</h2>
+                            <p class="dull-white f18 fade-in">We more than just a provider of electricity services -
+                                we're
                                 pioneers
                                 in
                                 the energy industry,
                                 dedicated to shaping a brighter, more sustainable future for all.</p>
                             <div class="div_with_tick">
-                                <p class="f18 my-4"><i class="fa fa-check" aria-hidden="true"></i> sample tet for the
+                                <p class="f18 my-4 fade-in"><i class="fa fa-check" aria-hidden="true"></i> sample tet
+                                    for the
                                     home
                                     page</p>
-                                <p class="f18 my-4"><i class="fa fa-check" aria-hidden="true"></i> sample tet for the
+                                <p class="f18 my-4 fade-in"><i class="fa fa-check" aria-hidden="true"></i> sample tet
+                                    for the
                                     home
                                     page</p>
-                                <p class="f18 my-4"><i class="fa fa-check" aria-hidden="true"></i> sample tet for the
+                                <p class="f18 my-4 fade-in"><i class="fa fa-check" aria-hidden="true"></i> sample tet
+                                    for the
                                     home
                                     page</p>
                             </div>
-                            <button class="btn btn-danger nav-button">About Us</button>
+                            <button class="btn btn-danger nav-button fade-in">About Us</button>
                         </div>
                     </div>
                 </div>
             </div>
 
             <!-- Who we Are` -->
-            <div class="who_we_container pt80 pb80 bg-container-dull fade-in">
+            <div class="who_we_container pt80 bg-container-dull fade-in">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12 col-lg-6">
