--- a/sub-pages/projects/project.html
+++ b/sub-pages/projects/project.html
@@ -152,9 +152,8 @@
         </div>
 
         <!-- card click open -->
-        <p class="text-center fade-in our-company">Our Company</p>
+        <!-- <p class="text-center fade-in our-company">Our Company</p>
         <div class="click_card_container">
-            <!-- <div class="row"> -->
             <div class="text-center fade-in labour-details_container">
                 <img class="w-100" src="https://cdn.pixabay.com/photo/2025/03/09/16/02/hare-9457418_960_720.jpg" alt="">
                 <p class="">Profssional Engineers</p>
@@ -165,11 +164,6 @@
                 <p>Site Supervisors</p>
                 <p>19</p>
             </div>
-            <!-- <div class="text-center fade-in labour-details_container">
-                <img class="w-100" src="https://cdn.pixabay.com/photo/2025/03/09/16/02/hare-9457418_960_720.jpg" alt="">
-                <p>Fore Man</p>
-                <p>19</p>
-            </div> -->
             <div class="text-center fade-in labour-details_container">
                 <img class="w-100" src="https://cdn.pixabay.com/photo/2025/03/09/16/02/hare-9457418_960_720.jpg" alt="">
                 <p>Electricans</p>
@@ -180,10 +174,7 @@
                 <p>Helpers</p>
                 <p>19</p>
             </div>
-
-
-            <!-- </div> -->
-        </div>
+        </div> -->
         <!-- PROJECT LIST CONTAINER -->
         <p class="text-center fade-in our-work">Our Work</p>
         <div class="project_list-container">
@@ -552,7 +543,7 @@
         <!-- EXPLORE OUR WORK -->
         <div class="explore_our_word-container">
             <div class="d-flex flex-column align-items-center header">
-                <h1 class="display-6 fade-in mb-0 mt-3">OUR RECENT WORKS</h1>
+                <h1 class="display-6 fade-in mb-0 mt-3">Image Gallary</h1>
                 <p class="fade-in lead mb-4 mt-2 container">
                     lightGallery is a feature-rich, modular JavaScript gallery plugin for building beautiful image and
                     video galleries for the web and the mobile
